[gd_scene load_steps=2 format=3 uid="uid://abilityslot001"]

[ext_resource type="Script" path="res://src/ui/hud/ability_slot.gd" id="1_slot"]

[node name="AbilitySlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 80)
script = ExtResource("1_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="MarginContainer/VBoxContainer/IconRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "1"
